<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ifm3d_ros2</name>
  <version>0.1.1</version>
  <description>ifm pmd-based ToF Camera ROS2 package</description>
  <author email="tom.panzarella@ifm.com">Tom Panzarella</author>
  <maintainer email="tom.panzarella@ifm.com">Tom Panzarella</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <!--
  <build_depend>launch_testing</build_depend>
  <build_depend>launch_testing_ament_cmake</build_depend>
  <build_depend>launch_testing_ros</build_depend>
  -->
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>ros2launch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_opencv</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
