<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ifm3d_ros2</name>
  <version>1.1.0</version>
  <description>ifm ToF Camera ROS2 package</description>
  <maintainer email="support.efector.object-ident@ifm.com">ifm Robotics Support</maintainer>
  <license>Apache 2.0</license>
  <author email="support.efector.object-ident@ifm.com">ifm Robotics Support</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>rmw</depend>
  <depend>ros2launch</depend>
  <depend>rosidl_default_generators</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>python3-opencv</test_depend>
  <test_depend>python3-numpy</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
